[project]
name = "moshi"
requires-python = ">= 3.10"
description = "Moshi is moshi"
dependencies = [
    "numpy",
    "safetensors",
    "huggingface-hub",
    "bitsandbytes",
    "einops",
    "sentencepiece",
    "sounddevice",
    "sphn",
    "torch",
    "aiohttp",
    "pytest",
]
authors = [{name="Laurent Mazaré", email="laurent@kyutai.org"}]
maintainers = [{name="Laurent Mazaré", email="laurent@kyutai.org"}]
license = {text = "MIT"}
dynamic = ["version"]
readme = "README.md"

[project.scripts]
moshi-server = "moshi.server:main"
moshi-client = "moshi.client:main"

[tool.setuptools.dynamic]
version = {attr = "moshi.__version__"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pyright",
    "pytest",
    "flake8",
    "pre-commit",
    "gradio-webrtc>=0.0.18"
]
